tests/typing/bad/testfile-arith-4.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void foo() {}
int main() { 1 + foo(); }

